--- a/Reco_note/推荐系统实践(3)--冷启动问题.md
+++ b/Reco_note/推荐系统实践(3)--冷启动问题.md
@@ -1,6 +1,6 @@
 ### 1. 思维导图
 
-- 《推荐系统实践--项亮》第一章的学习笔记
+- 《推荐系统实践--项亮》第三章的学习笔记
 
 ![](https://blog-1258986886.cos.ap-beijing.myqcloud.com/%E6%8E%A8%E8%8D%90%E7%B3%BB%E7%BB%9F%E5%AD%A6%E4%B9%A0/12-1.png)
 
